@@ -14,6 +14,8 @@
         <maven.surefire.version>3.0.0-M7</maven.surefire.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <!-- Empty default value for Java version < 18 -->
+        <test.args></test.args>
     </properties>
     <licenses>
         <license>
@@ -134,7 +136,7 @@
             </dependency>
             <dependency>
                 <groupId>org.itsallcode.openfasttrace</groupId>
-                <artifactId>openfasttrace-importer-specoboject</artifactId>
+                <artifactId>openfasttrace-importer-specobject</artifactId>
                 <version>${revision}</version>
                 <scope>compile</scope>
             </dependency>
@@ -244,6 +246,17 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>java18</id>
+            <activation>
+                <jdk>18</jdk>
+            </activation>
+            <properties>
+                <!-- Required to fix failing tests in TestCliStarter:
+                    UnsupportedOperation The Security Manager is deprecated and will be removed in a future release -->
+                <test.args>-Djava.security.manager=allow</test.args>
+            </properties>
+        </profile>
     </profiles>
     <build>
         <plugins>
@@ -327,7 +340,10 @@
                     </systemPropertyVariables>
                     <useModulePath>true</useModulePath>
                     <argLine>
+                        <!-- Required for Jacoco coverage -->
                         @{argLine}
+                        <!-- Required for Java 18 -->
+                        ${test.args}
                         --illegal-access=deny
                         <!-- Required to fix failing EqualsVerifier test:
                             TestTracedLink.testEqualsAndHashContract:22 EqualsVerifier found a problem in class org.itsallcode.openfasttrace.api.core.TracedLink.
@@ -347,7 +363,10 @@
                     </systemPropertyVariables>
                     <useModulePath>true</useModulePath>
                     <argLine>
+                        <!-- Required for Jacoco coverage -->
                         @{argLine}
+                        <!-- Required for Java 18 -->
+                        ${test.args}
                         --illegal-access=deny
                         <!-- Required to fix failing EqualsVerifier test:
                             TestTracedLink.testEqualsAndHashContract:22 EqualsVerifier found a problem in class org.itsallcode.openfasttrace.api.core.TracedLink.
@@ -461,12 +480,6 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
-                    <version>3.0.0</version>
-                </plugin>
-                <!-- Self trace. -->
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
                     <version>3.0.0</version>
                 </plugin>
                 <!--This plugin's configuration is used to store Eclipse 
